# kinetics-data-processing

./: README.md  pyproject.toml
src/data/: download_kinetics.py
